fix minnor bugs,add margin style

--- a/usuarios.html
+++ b/usuarios.html
@@ -38,7 +38,7 @@
 </header>
 
 <body>
-    <div class="container-fluid">
+  <div class="container-fluid mt-3">
       <th><a class="btn btn-primary btn-lg btn-block" href="addusuario.html" role="button">Añadir usuario</a></th>
       <nav class="navbar navbar-light bg-light justify-content-between">
         <a class="navbar-brand">DNI</a>
@@ -59,8 +59,8 @@
                 <th scope="col">nickname</th>
                 <th scope="col">fecha de nacimiento</th>
                 <th scope="col">sexo</th>
-                <th scope="col">Borrar</th>
                 <th scope="col">Editar</th>
+                <th scope="col">Borrar</th>
               </tr>
             </thead>
             <tbody>
