--- a/addusuario.html
+++ b/addusuario.html
@@ -47,7 +47,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     -->
-    <div class="container-fluid">
+    <div class="container-fluid mt-3">
         <form>
             <div class="form-group row">
               <label for="inputEmail3" class="col-sm-2 col-form-label">DNI</label>
@@ -109,13 +109,13 @@
                   <legend class="col-form-label col-sm-2 pt-0">Sexo</legend>
                   <div class="col-sm-10">
                     <div class="form-check">
-                      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                      <input class="form-check-input" type="radio" name="gridRadios2" id="gridRadios1" value="option1" checked>
                       <label class="form-check-label" for="gridRadios1">
                         hombre
                       </label>
                     </div>
                     <div class="form-check">
-                      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                      <input class="form-check-input" type="radio" name="gridRadios2" id="gridRadios2" value="option2">
                       <label class="form-check-label" for="gridRadios2">
                         mujer
                       </label>
