--- a/materiales.html
+++ b/materiales.html
@@ -37,7 +37,7 @@
       </div>
 </header>
 <body>
-    <div class="container-fluid">
+  <div class="container-fluid mt-3">
       <th><a class="btn btn-primary btn-lg btn-block" href="addMaterial.html" role="button">Añadir material</a></th>
       <nav class="navbar navbar-light bg-light justify-content-between">
         <a class="navbar-brand">ID</a>
@@ -62,8 +62,8 @@
                 <th scope="col">Paginas</th>
                 <th scope="col">duracion</th>
                 <th scope="col">formato</th>
-                <th scope="col">Borrar</th>
                 <th scope="col">Editar</th>
+                <th scope="col">Borrar</th>
               </tr>
             </thead>
             <tbody>
