Interfaces de peliculas,libros,login,prototipo, perfil , registro, verMas

--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
                             </div>
                             <a class="btn btn-lg btn-primary btn-block text-uppercase" type="submit" href="http://www.google.es">Iniciar sesión</a>
                             <hr class="my-4">
-                            <a class="btn btn-lg btn-success btn-block text-uppercase" type="submit">Registrarse</a>
+                            <a class="btn btn-lg btn-success btn-block text-uppercase" type="submit" href="registro.html">Registrarse</a>
                             <hr class="my-4">
                             <a class="btn btn-lg btn-dark btn-block text-uppercase" type="submit" href="prototipo.html">Home</a>
                         </form>
