--- a/peliculas.html
+++ b/peliculas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <!doctype html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <!-- Required meta tags -->
@@ -10,8 +10,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="icon" type="image/png" href="img/favicon.png"/>
-    <title>Libros</title>
+
+    <title>Hello, world!</title>
 </head>
 
 <header>
@@ -73,7 +73,7 @@
 
         <div class="card-deck mt-3">
             <div class="card">
-                <img src="img/libro.jpg" class="card-img-top w-50 align-self-center" alt="...">
+                <img src="img/aladdin.jpg" class="card-img-top w-50 align-self-center" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Titulo de la pelicula</h5>
                     <p class="card-text">Descipción de la pelicula <br>This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="img/libro.jpg" class="card-img-top w-50 align-self-center" alt="...">
+                <img src="img/aladdin.jpg" class="card-img-top w-50 align-self-center" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Titulo de la pelicula</h5>
                     <p class="card-text">Descipción de la pelicula <br>This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="img/libro.jpg" class="card-img-top w-50 align-self-center" alt="...">
+                <img src="img/aladdin.jpg" class="card-img-top w-50 align-self-center" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Titulo de la pelicula</h5>
                     <p class="card-text">Descipción de la pelicula <br>This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -105,7 +105,7 @@
 
         <div class="card-deck mt-3">
             <div class="card">
-                <img src="img/libro.jpg" class="card-img-top w-50 align-self-center" alt="...">
+                <img src="img/aladdin.jpg" class="card-img-top w-50 align-self-center" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Titulo de la pelicula</h5>
                     <p class="card-text">Descipción de la pelicula <br>This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -114,7 +114,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="img/libro.jpg" class="card-img-top w-50 align-self-center" alt="...">
+                <img src="img/aladdin.jpg" class="card-img-top w-50 align-self-center" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Titulo de la pelicula</h5>
                     <p class="card-text">Descipción de la pelicula <br>This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -123,7 +123,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="img/libro.jpg" class="card-img-top w-50 align-self-center" alt="...">
+                <img src="img/aladdin.jpg" class="card-img-top w-50 align-self-center" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Titulo de la pelicula</h5>
                     <p class="card-text">Descipción de la pelicula <br>This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
