--- a/verMas.html
+++ b/verMas.html
@@ -65,47 +65,34 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     -->
 
+    <h1 class="container-fluid mt-3">Titulo del libro<small> Fecha de publicación</small></h1>
 
+<hr>
 
+<div class="row animated fast fadeIn container-fluid">
 
+    <div class="col-md-4">
 
-    <!-- CARROUSEL DE IMAGENES -->
-    <div id="carouselExampleControls" class="carousel slide container-fluid mt-3" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/c3.jpg" class="  img-fluid " alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="img/c2.jpg" class=" img-fluid" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="img/c1.jpg" class=" img-fluid" alt="...">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
+        <img src="img/libro.jpg" class="img-fluid" alt="">
+        <br><br>
+        <a href="prototipo.html" class="btn btn-outline-danger btn-block">Regresar</a>
+        <a href="#" class="btn btn-outline-success btn-block">Reservar</a>
 
-
-      <!--HISTORIA DE GESLIB-->
-
-    <div class="container-fluid mt-3">
-      <h1> HISTORIA DE GESLIB</h1>
-
-      <P> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</P>
-
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
     </div>
 
+    <div class="col-md-8">
+
+        <h3>Titulo del libro</h3>
+        <hr>
+        <p>Biografia del libro</p>
+
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos minima iure exercitationem ipsa ad hic doloribus, natus facere nisi dolores minus deserunt velit officiis libero commodi recusandae? Nihil, ipsum minima!</p>
+        
 
 
+    </div>
 
+</div>
 
 
 </body>
